--- a/about.html
+++ b/about.html
@@ -18,28 +18,36 @@
         <img src="JP_Headshot.jpg" class="rounded"/>
     </div>
 
-    <div class = "section">
-        <h3>My Journey With Coding</h3>
-        <p>My first experience with any sort of coding was using Scratch, which I started at the age of 7. I  
-            loved creating programs that simulated some sort of battle, whether it was Pokemon or Star Wars. While a fair amount of my projects are incomplete, my profile is somehow still up and running (viewable <a href="https://scratch.mit.edu/users/Roogie/"> Here</a>.) 
-            While my professional endeavors don't involve any Pokemon fights, I believe this was an important step in my journey.
+    <div class="section">
+        <h3>Motivation</h3>
+        <p>
+            There's nothing I love more than solving problems, whether it be with a clever algorithm or a machine learning model. I aspire to learn as much as I can from every experience I have, and love to build and experiment in my free time. If you'd like to see some of the stuff I've built in my free time, feel free to check out my <a href="projects.html" target="_self">Projects</a>. 
         </p>
 
-        <p>
-            Once I stopped homeschooling, my usage of Scratch died down and I didn't do any sort of coding until my senior year of high school. A friend and I decided to take an introductory (or so we thought) course in C++ at the local community college. Armed with our chromebooks and online compilers, we suffered through the class with almost no understanding
-            of how to code at the end. Once I finished that course, I swore off coding for good... or so I thought!
-        </p>
-
-        <p>
-            One of the required classes for everyone at Mines was an introductory Python course.
-            Despite being a mechanical engineering major (as well as my promise to myself) I started to enjoy the problem-solving aspect of coding a LOT. There was nothing more exhilerating than passing all autograder tests on the first try,
-            and I found myself wanting to learn more about software. I switched majors to Computer Science with a Focus Area in Data Science; admittedly, the focus area pick was arbitrary but I luckily made the right decision!
-        </p>
-        <p>
-            Taking an introductory Data Science class in Fall 2024 cemented my decision of major and focus area. I absolutely loved the class, and created several projects as a result. I also realized that I needed to find an internship; after hundreds of applications and a fair amount of luck, I managed to land a Data Science internship at Woodward where I currently work!
-            I've been fortunate enough to build models that are in production
-        </p>
     </div>
+
+    <div class = "section">
+        <h3>Discovering Computer Science</h3>
+        <p>
+            I came to college with a declared major of mechanical engineering, and was certain it was
+            the path for me based on some of the engineering classes I had taken in high school. However, I took the required Introduction to Computer Science (taught in Python)
+            and something just "clicked". I changed my major, chose a focus area of Data Science (an arbitrary decision at the time... good thing I ended up loving it) and haven't looked back since!
+        </p>
+
+    </div>
+
+    <div class="section">
+        <h3>Personal Life</h3>
+        <figure>
+            <img src="longs_peak.jpg" class="smallimage">
+            <figcaption>Me at the top of Long's Peak (above the clouds)!</figcaption>
+        </figure>
+        <p>
+            I'm a big fan of being outdoors. While I spend a lot of my time on personal projects, I also have the classic Colorado hobbies of hiking and skiing.
+            Going to the gym and disc golfing are also favorites!
+        </p>        
+    </div>
+
 
 
 
