--- a/contact.html
+++ b/contact.html
@@ -1,29 +1,26 @@
 <!DOCTYPE html>
 
 <head>
-    <title>More About Jean-Pierre</title>
+    <title>Contact Jean-Pierre</title>
     <link href="./style.css" rel="stylesheet">
 </head>
 
-
 <body>
-    <div class = "headline">
-        <ol>
+
+    <div class="menu">
+        <a href="#">Menu</a>
+        <div class="dropdown">
             <a href="landingPage.html" target="_self">Home</a>
-            <a href="about.html" target="_self">More About Me</a>
             <a href="projects.html" target="_self">Projects</a>
             <a href="contact.html" target="_self">Contact</a>
-        </ol>
-        <h1>Contact Me</h1>
+        </div>
     </div>
-    <div class = "section">
-        <p>I love talking with others about computer science and machine learning, and would be happy to 
-            chat about any topic. Feel free to connect with me via one of the 
-            links below: 
-        </p>
-    
-        <a>LinkedIn</a>
-        <a>Email</a>
-        <a>GitHub</a> 
+
+    <div class="headline">
+        <h1 class="name">Contact Me</h1>
     </div>
-</body
+
+    <div class = "contact">
+        <p>Whether its for a round of disc golf or a conversation about machine learning, I love 
+            meeting and chatting new people, so feel free to reach out via email (jeanpierrebroz@gmail.com) or <a href="https://www.linkedin.com/in/jean-pierre-broz/" target="_blank">LinkedIn</a>!
+    </div>
