--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
     <div class="menu">
         <a href="#">Menu</a>
         <div class="dropdown">
-            <a href="landingPage.html" target="_self">Home</a>
+            <a href="index.html" target="_self">Home</a>
             <a href="projects.html" target="_self">Projects</a>
             <a href="contact.html" target="_self">Contact</a>
         </div>
