added grouphug info

--- a/projects.html
+++ b/projects.html
@@ -29,4 +29,20 @@
             Currently in progress, I'll update the link to the project once it's done!
         </p>
     </div>
-    <h3>I have a bunch of projects I need to clean up before posting, so more coming soon :)</h3>
+
+    <div class="project_parent">
+        <h3><a href="https://github.com/jeanpierrebroz/grouphug">GroupHug (NVIDIA Hackathon)</a>: Listening History for Spotify</h3>
+        <p>Tech Stack: Python, JavaScript, Docker, Pinecone, PyTorch, Vercel</p>
+        <p>
+            Objective: Create more visibility across organizations by enabling people to search for people/projects interally 
+            with natural language (RAG for internal information!).
+
+        </p>
+        <p>
+            More Info: My partner and I built GroupHug in under 2 hours at an NVIDIA hackathon in San Francisio. We were unsatisfied with current solutions
+            (like SharePoint, etc.) and figured we could make something that worked a lot better while not being too complicated. We managed to get a working 
+            prototype in under 2 hours, and have since gotten the opportunity to implement it at a 7000+ person software company! If you want to know more about it, you can check out the <a href = "https://github.com/jeanpierrebroz/grouphug" > GitHub </a>
+            link for it. It's still very much in beta, but if you have an interest in seeing what it could do for your organization message me and I'd be happy to work with you on implementing it (completely open source, so its free!).
+       
+        </p>
+    </div>
