oopsie i made a typo

--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,7 @@
     </div>
 
     <div class="project_parent">
-        <h3><a href="https://github.com/jeanpierrebroz/grouphug">GroupHug (NVIDIA Hackathon)</a>: Listening History for Spotify</h3>
+        <h3><a href="https://github.com/jeanpierrebroz/grouphug">GroupHug (NVIDIA Hackathon)</a>: Internal Semantic Search Engine</h3>
         <p>Tech Stack: Python, JavaScript, Docker, Pinecone, PyTorch, Vercel</p>
         <p>
             Objective: Create more visibility across organizations by enabling people to search for people/projects interally 
