--- a/projects.html
+++ b/projects.html
@@ -40,8 +40,7 @@
         </p>
         <p>
             More Info: My partner and I built GroupHug in under 2 hours at an NVIDIA hackathon in San Francisio. We were unsatisfied with current solutions
-            (like SharePoint, etc.) and figured we could make something that worked a lot better while not being too complicated. We managed to get a working 
-            prototype in under 2 hours, and have since gotten the opportunity to implement it at a 7000+ person software company! If you want to know more about it, you can check out the <a href = "https://github.com/jeanpierrebroz/grouphug" > GitHub </a>
+            (like SharePoint, etc.) and figured we could make something that worked a lot better while not being too complicated. If you want to know more about it, you can check out the <a href = "https://github.com/jeanpierrebroz/grouphug" > GitHub </a>
             link for it. It's still very much in beta, but if you have an interest in seeing what it could do for your organization message me and I'd be happy to work with you on implementing it (completely open source, so its free!).
        
         </p>
